--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 <body>
   <div class="card">
-    <h1>Would you be my valentine? 💘</h1>
+    <h1>Would you be my valentine Laura Saignie? 💘</h1>
     <p>Clique sur Yes ou No 😇</p>
 
     <div class="arena" id="arena">
